@@ -1,0 +1,32 @@
+Berkeley YACC for MS-DOS
+Wido Kruijtzer
+December 23, 1993
+
+This is a port of Berkeley YACC version 1.9 (02/21/93)
+The port was extremely straightforward. I only made the following changes:
+
+    Most changes are #ifdef'ed to the MSDOS definition.
+    e.g. 5 #ifdef's in defs.h and 3 #ifdef's in main.c
+
+    Changes in main.c : added an expanded usage part
+                        casted every switch explicitly to int
+
+    Changes in reader.c : casted the switch statement on line 161 to int
+
+    Changes in makefile : customised it to compile with ZORTECH C++ version 3.1
+                          using the ANSI flag and the compact memory model
+
+Most of the above changes were found in the port of Berkeley yacc 1.7 done
+by Jeff Jennes - University of Missouri - Rolla
+
+I have tested the port on the test cases given and on several other files
+and it appears to be fully functional.
+
+If you find bugs in the port, feel free to let me know.
+
+My changes, like the rest of Berkeley YACC, are in the public domain.
+
+Wido Kruijtzer (kruytzer@eb.ele.tue.nl)
+Eindhoven University of Technology
+Digital Informationsystems Group, Room EH 10.08
+P.O. Box 513, 5600 MB Eindhoven, The Netherlands.
